--- a/_config.yml
+++ b/_config.yml
@@ -1,13 +1,10 @@
 title: Dillon Mahmoudi # your name (or website title) here
 logo: "/images/dillonma_mappingcapital_purple.png?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
-  he/him/his
   <br><br>
-  Mapping how the flows of (more than) capital produce and are produced by uneven geographies.
+  <strong>Mapping Capital</strong>: how the flows of (more than) capital produce and are produced by uneven geographies.
   <br><br>
-  Assistant Professor of Geography and Environmental Systems at University of Maryland, Baltimore County.
-  <br><br>
-  <a href="https://www.linkedin.com/in/example/">View My LinkedIn Profile</a>
+  <strong>Assistant Professor of Geography and Environmental Systems</strong> at University of Maryland, Baltimore County. he/him
   
 theme: jekyll-theme-minimal
 google_analytics: UA-000000-0 # your Google Analytics tracking ID here
