--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
-title: Dillon Mahmoudi # your name (or website title) here
+title: Justin Johnson # your name (or website title) here
 logo: "/images/dillonma_mappingcapital_purple.png?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
-  <strong>Assistant Professor of Geography and Environmental Systems</strong> at University of Maryland, Baltimore County. he/him
+  <strong>Graduate Student</strong> at University of Maryland, Baltimore County. 
   <br><br>
-  <strong>Mapping Capital</strong>: how the flows of (more than) capital produce and are produced by uneven geographies.
+  <strong>Mapping Single-Family Zoning In Central Maryland</strong>: Measuring how widespread single-family zoning restrictions are in the Baltimore Metropolitan Statisitcal Area.
   
 
   
