--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Justin Johnson # your name (or website title) here
-logo: "/images/dillonma_mappingcapital_purple.png?raw=true" # your photo (or logo) here
+logo: "GESFinalProject.io/images/IMG-3547.jpg?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
   <strong>Graduate Student</strong> at University of Maryland, Baltimore County. 
   <br><br>
