--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: Justin Johnson # your name (or website title) here
 logo: "images/IMG-3547.jpg" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
-  <strong>Graduate Student</strong> at University of Maryland, Baltimore County. 
+  <strong>Graduate Student at University of Maryland, Baltimore County.</strong> 
   <br><br>
   <strong>Mapping Single-Family Zoning In Central Maryland</strong>: Measuring how widespread single-family zoning restrictions are in the Baltimore Metropolitan Statisitcal Area.
   
