--- a/_config.yml
+++ b/_config.yml
@@ -6,4 +6,5 @@ description: > # your text below (remove <br> elements if you don't need line br
   <strong>Mapping Single-Family Zoning In Central Maryland</strong>: Measuring how widespread single-family zoning restrictions are in the Baltimore Metropolitan Statisitcal Area.
   
 
-  
+theme: jekyll-theme-minimal
+google_analytics: UA-000000-0 # your Google Analytics tracking ID here
