--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
-title: Justin Johnson # your name (or website title) here
-logo: "images/IMG-3547.jpg" # your photo (or logo) here
-description: > # your text below (remove <br> elements if you don't need line breaks)
+title: Justin Johnson 
+logo: "images/IMG-3547.jpg" 
+description: > 
  <strong>Graduate Student in Economic Policy Analysis</strong> at University of Maryland, Baltimore County. 
 
   
